[project]
authors = [
{name = "Miron Sadykov", email = "MironSadykov@yandex.ru"},
]
requires-python = "==3.12.*"
dependencies = [
	"aiofiles<25.0.0,>=24.1.0",
	"aiohttp<4.0.0,>=3.11.6",
	"m3u8<7.0.0,>=6.0.0",
	"python-slugify<9.0.0,>=8.0.4",
]
name = "rutube-downloader"
version = "0.1.0"
description = ""
readme = "docs/README.md"
package-mode = false

[dependency-groups]
dev = [
	"ruff<1.0.0,>=0.7.4",
	"types-aiofiles<25.0.0.0,>=24.1.0.20240626",
	"pyinstaller<7.0.0,>=6.11.1",
	"types-m3u8<7.0.0.0,>=6.0.0.20241002",
	"pytest<9.0.0,>=8.3.3",
	"pytest-asyncio<1.0.0,>=0.24.0",
	"pytest-cov<7.0.0,>=6.0.0",
]


[tool.pytest.ini_options]
pythonpath = ["src"]
asyncio_default_fixture_loop_scope = "function"
addopts = ["-s", "-v", "--lf"]


[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
]

line-length = 79

[tool.ruff.lint]
# https://docs.astral.sh/ruff/configuration/
select = ["E", "F", "W", "Q", "I", "ASYNC", "N", "C901"]

# [tool.mypy]
# ignore_missing_imports = true
